test/expected/parse_unexpected_then.out
shit: 2:1: error: 'then' has no matching 'if'.
     2 |  then
       |  ^~~~ here.
